@@ -30,6 +30,8 @@ Math::String:
 		 added bone(), is_valid(), minlen(), maxlen(), type(), class() 
 2002-02-20 1.17: removed debug output
 		 _core_lib => config()->{lib}
+2002-02-28 1.18: binc()/bdec() four times as fast
+		 as_number twice as fast
 
 ############################################################################## 
 Math::String::Charset:
